[gd_scene load_steps=11 format=3 uid="uid://bcxkwga80ve8u"]

[ext_resource type="Script" uid="uid://bjk3i01rh3rgs" path="res://farm_tile.gd" id="1_8yfbs"]
[ext_resource type="Texture2D" uid="uid://bydyxd83wf4lv" path="res://textureAtlas.png" id="2_ia4s4"]
[ext_resource type="Script" uid="uid://c4n7n5qrg05td" path="res://farm_tile_hitbox.gd" id="3_8yfbs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lsl7k"]
atlas = ExtResource("2_ia4s4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ddp53"]
size = Vector2(2.22725, 1.83748)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6nhlr"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkvcj"]
size = Vector2(19.7279, 19.6704)

[sub_resource type="Animation" id="Animation_ia4s4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8yfbs"]
resource_name = "grow"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 0.0693481),
"update": 0,
"values": [Vector2(1, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -1.585), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a7751"]
_data = {
&"RESET": SubResource("Animation_ia4s4"),
&"grow": SubResource("Animation_8yfbs")
}

[node name="FarmTile" type="Node2D"]
script = ExtResource("1_8yfbs")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("AtlasTexture_lsl7k")

[node name="Blend" type="Node2D" parent="."]

[node name="DeletingCollision" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeletingCollision"]
position = Vector2(0.0204535, -0.0381246)
shape = SubResource("RectangleShape2D_ddp53")

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(-8, -8)
script = ExtResource("3_8yfbs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_6nhlr")

[node name="PlayerCollision" type="StaticBody2D" parent="."]
visible = false
position = Vector2(-8, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(8.10478, 7.96018)
shape = SubResource("RectangleShape2D_rkvcj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a7751")
}

[connection signal="input_event" from="DeletingCollision" to="DeletingCollision" method="_on_input_event"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_hit_box_area_exited"]
[connection signal="input_event" from="HitBox" to="HitBox" method="_on_input_event"]
